[package]
name = "EfieldSim"
version = "0.1.0"
edition = "2021"

[dependencies]
broccoli = "6.3.0"
fastrand = "2.2.0"
once_cell = "1.20.2"
palette = "0.7.6"
parking_lot = "0.12.3"
quarkstrom = { git = "https://github.com/DeadlockCode/quarkstrom.git", version = "0.1.0" }
stopwatch = "0.0.7"
ultraviolet = "0.9.2"
